--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>Home - Anete Fidélis</title>
     <meta charset="utf-8">
   </head>
   <body bgcolor="#FFFFFF">
